# healthflow-agents

./: README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
docs/: 2026-05-14-phi-redaction-design.md
evals/: README.md
evals/translate/: cases.yaml  judge.py  loader.py  report.json  report.py  run.py  runner.py  scorer.py
examples/: provider_demo.py
healthflow_agents/: __init__.py
healthflow_agents/agents/: __init__.py  appeal_agent.py  comparison_agent.py  cost_calculator_agent.py  network_agent.py  translation_agent.py
healthflow_agents/batch/: __init__.py  prioritize.py  runner.py
healthflow_agents/contracts/: __init__.py  denial_record.py  schemas.py
healthflow_agents/core/: base.py  client.py  logging.py  models.py  safety.py
healthflow_agents/prompts/: appeal_agent.md  appeal_provider.md  comparison_agent.md  cost_calculator_agent.md  network_agent.md  translation_agent.md
healthflow_agents/redaction/: __init__.py  phi_redactor.py  prompt_inputs.py
healthflow_agents/tools/: appeal_writer.py  cost_estimator.py  cost_modeler.py  denial_codes.py  x12_835.py  (+8 more)
tests/: helpers.py  test_appeal_agent.py  test_appeal_writer.py  test_comparison_agent.py  test_cost_calculator_agent.py  test_cost_estimator.py  test_cost_modeler.py  test_denial_codes.py  test_denial_parser.py  test_formulary_checker.py  test_judge.py  test_loader.py  test_model_tiering.py  test_network_agent.py  test_no_raw_prompt_path.py  test_npi_client.py  test_phi_redactor.py  test_prompt_inputs.py  test_provider_cache.py  test_provider_checker.py  test_provider_network.py  test_report.py  test_runner.py  test_safety.py  test_scorer.py  test_translation_agent.py
(+11 files in other folders)
