[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "healthflow-agents"
version = "0.1.0"
description = "HealthFlow's insurance-navigation Claude agents as a standalone, installable package"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40",
    "pydantic>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.setuptools.packages.find]
include = ["healthflow_agents*"]

[tool.setuptools.package-data]
healthflow_agents = ["prompts/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
