[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "healthflow-agents"
version = "0.3.0"
description = "HealthFlow's insurance-navigation Claude agents as a standalone, installable package"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40",
    "pydantic>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
evals = [
    "pyyaml>=6",
    "python-dotenv>=1",
]
dev = [
    "pytest>=8",
    "pyyaml>=6",
    "python-dotenv>=1",
]

[tool.setuptools.packages.find]
include = ["healthflow_agents*"]

[tool.setuptools.package-data]
healthflow_agents = ["prompts/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Repo root on sys.path so tests can import the top-level evals/ package
# (which is not shipped in the wheel); tests/ so subdirectory test modules
# can import the shared tests/helpers.py.
pythonpath = [".", "tests"]
